--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
     "vaul": "^1.1.2"
